--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -3,3 +3,8 @@
     src: url('../fonts/Inter-Regular.woff2') format('woff2');
     font-weight: 400;
 }
+@font-face {
+    font-family: "SintonyRegular";
+    src: url('../fonts/Sintony-Regular.woff2') format('woff2');
+    font-weight: 400;
+}
