--- a/src/index.pug
+++ b/src/index.pug
@@ -1,21 +1,11 @@
-include components/vars.pug
+extends components/layouts/mainLayout.pug
 
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-        link(rel="stylesheet", href="css/bootstrap.min.css")
-        link(rel="stylesheet", href="css/style.min.css")
-
-    
-    body
+block header
+    include components/header/header.pug
+block main
+    main
         .wrapper.d-flex.flex-column
             .container
                 include components/commoditiesForm/commoditiesForm.pug
-
-
-        script(type="module" src="js/bootstrap.min.js")
-        script(type="module" src="js/main.min.js")
+block footer
+    include components/footer/footer.pug
