--- a/src/styles/scss/vars.scss
+++ b/src/styles/scss/vars.scss
@@ -1,5 +1,15 @@
 $btn-close-size: 0.65em;
 $input-border-color: #dee2e6;
 
-
-// fonts
+$custom-white: #FBFBFB;
+$custom-black: #313131;
+$header-color: #370665;
+$main-background: #35589A;
+$custom-orange: #F14A16;
+$custom-light-orange: #FC9918;
+$custom-gray: #787777;
+$custom-light-violet: #9297f7;
+$f-size-logo: 56px;
+$f-size-menu: 22px;
+$f-size-h1: 32px;
+$input-width: 350px;
