--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -8,3 +8,13 @@
     src: url('../fonts/Sintony-Regular.woff2') format('woff2');
     font-weight: 400;
 }
+@font-face {
+    font-family: 'SintonyBold';
+    src: url('../fonts/Sintony-Bold.woff2')  format('woff2');
+    font-weight: 700;
+}
+@font-face {
+    font-family: 'EuroCaps';
+    src: url('../fonts/EUROCAPS.woff2')  format('woff2');
+    font-weight: 400;
+}
