--- a/src/components/commoditiesTable/commoditiesTable.pug
+++ b/src/components/commoditiesTable/commoditiesTable.pug
@@ -1,19 +1,19 @@
+- const columns = ['Location', 'Pad', 'Dist St', 'Distance', 'Supply', 'Price', 'Updated at']
+
 .table-responsive-lg
-    table.table.rounded-2.overflow-hidden
+    table.c-table.table.table-striped.table-bordered.table-sm.rounded-2.overflow-hidden
         thead
             tr
-                th(scope='col') Column 1
-                th(scope='col') Column 2
-                th(scope='col') Column 3
-        tbody
+                each val in columns
+                    th.bg-light-orange(scope='col') #{val}
+        tbody.table-group-divider
             tr
-                td c1 value
-                td c2 value
-                td c3 value
+                each val in columns
+                    td.text-start #{val} value
+
             tr
-                td c1 value
-                td c2 value
-                td c3 value
+                each val in columns
+                    td.text-start #{val} value
             tr
-                td(colspan='2') c1-2 value
-                td c3 value
+                each val in columns
+                    td.text-start #{val} value
