--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -8,7 +8,7 @@
     height: 100vh;
 }
 
-.wrapper {
+main {
     font-family: 'SintonyRegular', sans-serif;
     font-weight: 400;
     height: 100vh;
