--- a/src/styles/scss/vars.scss
+++ b/src/styles/scss/vars.scss
@@ -11,5 +11,6 @@ $custom-gray: #787777;
 $custom-light-violet: #9297f7;
 $f-size-logo: 56px;
 $f-size-menu: 22px;
-$f-size-h1: 32px;
-$input-width: 350px;
+
+$dd-font-size: 16px;
+$lh-1: 1;
